add schedule api

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
 .h-screen {
   height: 100vh;
 }
+
+.react-nice-calendar-7QzC3
+  .react-nice-calendar-2gfqk
+  .react-nice-calendar-pO9F1.react-nice-calendar-p1xEc.react-nice-calendar-2sfU0.react-nice-calendar-2sfU0 {
+  color: rgb(11, 67, 115);
+}
