--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
   height: 100vh;
 }
 
+a.disabled {
+  pointer-events: none;
+  opacity: 0.5;
+}
+
 .react-nice-calendar-7QzC3
   .react-nice-calendar-2gfqk
   .react-nice-calendar-pO9F1.react-nice-calendar-p1xEc.react-nice-calendar-2sfU0.react-nice-calendar-2sfU0 {
